[infra-proxy-service] Add Clients gRPC & HTTP API
